feat: create navbar with header and update styling

--- a/ui/global/sass/_variables.scss
+++ b/ui/global/sass/_variables.scss
@@ -17,6 +17,9 @@ $colorBlack: #000;
 
 // FONT
 $fsDefault: 1.6rem;
-$fsLarge: 2.4rem;
+$fsXLarge: 2.4rem;
+$fsLarge: 2rem;
 $fsSmall: 1.4rem;
 $fsSmall2: 1.2rem;
+
+$fontPrimary: "Yusei Magic", Arial, Helvetica, sans-serif;
