--- a/ui/src/components/Button/index.scss
+++ b/ui/src/components/Button/index.scss
@@ -7,6 +7,7 @@
   margin-left: auto;
   margin-right: auto;
   margin-top: 10px;
+  margin-bottom: 15px;
   width: 93%;
   border: 1px solid $colorBlueDark;
   @include buttonAnimation(translateY(-3px));
