--- a/ui/src/routes/definition/components/index.scss
+++ b/ui/src/routes/definition/components/index.scss
@@ -1,21 +1,23 @@
 @import "@global/sass/main";
 
+.container {
+  position: absolute;
+  width: 100%;
+  top: 10rem;
+  z-index: 1;
+}
+
 .title {
-  color: $colorGreyDark1;
+  color: $colorGreyLight2;
   font-family: "Yusei Magic", sans-serif;
   font-size: $fsLarge;
   text-align: center;
 }
 
 .text {
-  background-image: linear-gradient(
-      to right bottom,
-      rgba(247, 247, 248, 0.8),
-      rgba(197, 214, 230, 0.8)
-    ),
-    url("./fog-1535201_1920.jpg");
-  background-size: cover;
-  background-position: center;
+  background: rgba($colorGreyLight2, 0.7);
+  border: solid 0.5px $colorBlueDark;
+  border-radius: 2px;
 
   color: $colorGreyDark1;
   font-family: "Yusei Magic", sans-serif;
@@ -26,30 +28,26 @@
   padding-left: 20px;
   padding-top: 5px;
   padding-bottom: 5px;
+  margin-bottom: 5px;
   transition: all, 0.5s;
 
   &:hover {
-    background-image: linear-gradient(
-        to right bottom,
-        darken(rgba(247, 247, 248, 0.8), 10),
-        darken(rgba(197, 214, 230, 0.8), 10)
-      ),
-      url("./fog-1535201_1920.jpg");
+    background-color: darken(rgba(247, 247, 248, 0.8), 10);
   }
 }
 
 .text:hover {
   .animateText {
-    animation: enlarge 1.5s ease-out;
+    animation: darkenText 1.5s ease-out;
   }
 }
 
-@keyframes enlarge {
+@keyframes darkenText {
   0% {
     color: darken($colorGreyDark1, 5);
   }
   75% {
-    color: darken($colorGreyDark1, 20);
+    color: darken($colorGreyDark1, 25);
   }
   90% {
     color: darken($colorGreyDark1, 3);
