feat: add word search option to one-word route
- Add text input component
- Add option card component

--- a/ui/global/sass/_variables.scss
+++ b/ui/global/sass/_variables.scss
@@ -9,7 +9,8 @@ $colorRed: #b73427;
 
 $colorGreyLight1: #f7f7f7;
 $colorGreyLight2: #eee;
-$colorGreyDark1: #777;
+$colorGreyMedium1: #999;
+$colorGreyDark1: #777777;
 $colorGreyDark2: #282828;
 
 $colorWhite: #fff;
