chore: update button styling and make button animation dynamic

--- a/ui/global/sass/_mixins.scss
+++ b/ui/global/sass/_mixins.scss
@@ -6,7 +6,7 @@
   border-radius: 100px;
 }
 
-@mixin buttonAnimation($translateY) {
+@mixin buttonHover($translateY) {
   transition: all 0.5s;
 
   &:hover {
